--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --backgroundColour: #1B1B1E;
+  --highlightColour: #F15152;
+  --foregroundTextColour: white;
+  --backgroundTextColour: #BBCBCB;
+  --keyWordTextColour: #2D728F;
+  --separatorColour: #BBCBCB80;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +19,75 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.Link {
+  position: relative;
+  display: inline-block;
+  /* font-size: 16px;
+  line-height: 24px; */
+  height: 24px;
+  color: var(--foregroundTextColour);
+  text-decoration: none;
+}
+
+.Link::after {
+  content: '';
+  position: absolute;
+  display: block;
+  bottom: -8px;
+  left: 0;
+  width: 40%;
+  height: 2px;
+  border-bottom: 2px solid var(--foregroundTextColour);
+}
+
+.Link,
+.Link::after {
+  transition: all 0.6s linear;
+}
+
+/* .Link:hover {
+  color: rgb(255, 0, 0);
+} */
+
+.Link:hover::after {
+  left: 0;
+  width: 100%;
+  border-bottom: 2px solid var(--highlightColour);
+}
+
+.Body {
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-bottom: 35px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  line-height: 170%;
+  color: var(--backgroundTextColour);
+  max-width: 1500px;
+}
+
+.Heading {
+  padding-top: 35px;
+  padding-bottom: 35px;
+  padding-left: 70px;
+  font-family: 'Fira Code', monospace;
+  font-weight: 400;
+  line-height: 240%;
+  color: var(--foregroundTextColour);
+  max-width: 1900px;
+}
+
+/* TODO: Move this into Navbar section */
+.NavbarItems {
+  font-family: 'Fira Code', monospace;
+  font-weight: 400;
+  color: var(--foregroundTextColour);
+}
+
+.Highlighted {
+  padding: 8px;
+  background-color: var(--highlightColour);
+  color: var(--backgroundColour);
 }
