Add: added projects section

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --backgroundColour: #1B1B1E;
+  --backgroundColour2: #27272B;
   --highlightColour: #F15152;
   --foregroundTextColour: white;
   --backgroundTextColour: #BBCBCB;
