--- a/src/index.css
+++ b/src/index.css
@@ -1,94 +1,69 @@
 :root {
-  --backgroundColour: #1B1B1E;
-  --backgroundColour2: #27272B;
-  --highlightColour: #F15152;
-  --foregroundTextColour: white;
-  --backgroundTextColour: #BBCBCB;
-  --keyWordTextColour: #2D728F;
-  --separatorColour: #BBCBCB80;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-.Link {
-  position: relative;
-  display: inline-block;
-  /* font-size: 16px;
-  line-height: 24px; */
-  height: 24px;
-  color: var(--foregroundTextColour);
-  text-decoration: none;
-}
-
-.Link::after {
-  content: '';
-  position: absolute;
-  display: block;
-  bottom: -8px;
-  left: 0;
-  width: 40%;
-  height: 2px;
-  border-bottom: 2px solid var(--foregroundTextColour);
-}
-
-.Link,
-.Link::after {
-  transition: all 0.6s linear;
-}
-
-/* .Link:hover {
-  color: rgb(255, 0, 0);
-} */
-
-.Link:hover::after {
-  left: 0;
-  width: 100%;
-  border-bottom: 2px solid var(--highlightColour);
-}
-
-.Body {
-  padding-left: 70px;
-  padding-right: 70px;
-  padding-bottom: 35px;
-  font-family: 'Montserrat', sans-serif;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
   font-weight: 500;
-  line-height: 170%;
-  color: var(--backgroundTextColour);
-  max-width: 1500px;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
-.Heading {
-  padding-top: 35px;
-  padding-bottom: 35px;
-  padding-left: 70px;
-  font-family: 'Fira Code', monospace;
-  font-weight: 400;
-  line-height: 240%;
-  color: var(--foregroundTextColour);
-  max-width: 1900px;
-}
-
-/* TODO: Move this into Navbar section */
-.NavbarItems {
-  font-family: 'Fira Code', monospace;
-  font-weight: 400;
-  color: var(--foregroundTextColour);
-}
-
-.Highlighted {
-  padding: 8px;
-  background-color: var(--highlightColour);
-  color: var(--backgroundColour);
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
